--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,25 +1,12 @@
-# 使用 .NET SDK 映像來構建應用程式
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-WORKDIR /app
-
-# 複製專案檔案
-COPY . .
-
-# 還原 NuGet 套件
+WORKDIR /src
+COPY ./backend_southernTravelWebsite2025 ./backend_southernTravelWebsite2025
+WORKDIR /src/backend_southernTravelWebsite2025
 RUN dotnet restore
+RUN dotnet publish -c Release -o /app/out
 
-# 編譯並發佈應用程式
-RUN dotnet publish -c Release -o /out
-
-# 使用 .NET ASP.NET 映像來運行應用程式
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
-
-# 從構建階段複製已發佈的應用程式檔案
-COPY --from=build /out .
-
-# 設定容器啟動時運行的指令（修改為正確的 DLL 名稱）
+COPY --from=build /app/out .
 ENTRYPOINT ["dotnet", "backend_southernTravelWebsite2025.dll"]
-
-# 開放容器的 80 端口
 EXPOSE 80
