--- a/backend_southernTravelWebsite2025/appsettings.json
+++ b/backend_southernTravelWebsite2025/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=aws-1-ap-southeast-1.pooler.supabase.com;Port=6543;Database=postgres;Username=postgres.cddnsyrhjjqnwaxywown;Password=HnbUVVrmrd6t3Q6i;SSL Mode=Require;Trust Server Certificate=true;Pooling=true;Keepalive=30"
+    "DefaultConnection": "Host=aws-1-ap-southeast-1.pooler.supabase.com;Port=6543;Database=postgres;Username=postgres.cddnsyrhjjqnwaxywown;Password=HnbUVVrmrd6t3Q6i;SSL Mode=Require;Trust Server Certificate=true;Pooling=true;Keepalive=30;Timeout=30;Command Timeout=30;"
   },
   "AllowedHosts": "*"
 }
